[gd_scene load_steps=7 format=2]

[ext_resource path="res://nodes/turret/Turret.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/fonts/gameplay.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://nodes/deck/Card.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=3]
size = 6
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.160784, 0.160784, 0.160784, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8

[sub_resource type="Theme" id=1]
Label/fonts/font = SubResource( 3 )
Panel/styles/panel = SubResource( 2 )

[node name="Card" type="Panel"]
modulate = Color( 0.5, 0.5, 0.5, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -35.0
margin_right = 3.0
margin_bottom = 1.0
rect_min_size = Vector2( 63, 36 )
theme = SubResource( 1 )
script = ExtResource( 3 )
turret = ExtResource( 1 )

[node name="Padding" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 4.0
margin_right = -6.0
margin_bottom = -4.0
alignment = 2

[node name="Repr" type="VBoxContainer" parent="Padding"]
margin_right = 23.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="TurretContainer" type="Control" parent="Padding/Repr"]
margin_right = 23.0
margin_bottom = 28.0
size_flags_vertical = 3

[node name="Positioner" type="Control" parent="Padding/Repr/TurretContainer"]
margin_top = 2.0
margin_bottom = 2.0

[node name="Stats" type="VBoxContainer" parent="Padding"]
margin_left = 27.0
margin_right = 51.0
margin_bottom = 28.0
size_flags_horizontal = 3
custom_constants/separation = 0
alignment = 1

[node name="Rate" type="Label" parent="Padding/Stats"]
margin_top = 2.0
margin_right = 24.0
margin_bottom = 10.0
size_flags_vertical = 5
custom_colors/font_color = Color( 0.588235, 0.709804, 1, 1 )
text = "1.0"
align = 2
valign = 1

[node name="Dmg" type="Label" parent="Padding/Stats"]
margin_top = 10.0
margin_right = 24.0
margin_bottom = 18.0
size_flags_vertical = 5
custom_colors/font_color = Color( 1, 0.25098, 0.25098, 1 )
text = "2.0"
align = 2
valign = 1

[node name="Cost" type="Label" parent="Padding/Stats"]
margin_top = 18.0
margin_right = 24.0
margin_bottom = 26.0
size_flags_vertical = 5
custom_colors/font_color = Color( 1, 0.831373, 0.313726, 1 )
text = "100.0"
align = 2
valign = 1

[node name="Button" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0

[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
